--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
     "jszip": "^3.1.5",
+    "leaflet": "^1.3.4",
     "leaflet-routing-machine": "^3.2.12",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
