--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@types/jquery": "^3.3.17",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "leaflet": "^1.3.4",
     "leaflet-routing-machine": "^3.2.12",
+    "ng2-daterangepicker": "^2.0.12",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.2",
-    "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
+    "@angular-devkit/build-angular": "^0.8.3",
     "@angular/cli": "~6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -44,8 +46,9 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
