--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,7 @@
             "styles": [
               "src/styles.css",
               "src/assets/leaflet/leaflet.css",
-              "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css",
-              "node_modules/bootstrap/dist/css/bootstrap-reboot.css",
-              "node_modules/bootstrap/dist/css/bootstrap-grid.css"
+              "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
             ],
             "scripts": [
               "src/assets/leaflet/shp.js",
