--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.2",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@types/jquery": "^3.3.17",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "leaflet": "^1.3.4",
     "leaflet-routing-machine": "^3.2.12",
