--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.2",
     "@types/jquery": "^3.3.17",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
@@ -31,6 +32,8 @@
     "leaflet": "^1.3.4",
     "leaflet-routing-machine": "^3.2.12",
     "ng2-daterangepicker": "^2.0.12",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.1.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
