--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@fortawesome/angular-fontawesome": "^0.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@types/jquery": "^3.3.17",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
@@ -31,6 +34,7 @@
     "jszip": "^3.1.5",
     "leaflet": "^1.3.4",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet-virtual-grid": "^1.0.7",
     "ng2-daterangepicker": "^2.0.12",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.4",
