--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "src/styles.css",
               "src/assets/leaflet/leaflet.css",
-              "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css","node_modules/primeicons/primeicons.css",
+              "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css",
+              "node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeng/resources/primeng.min.css"
             ],
@@ -34,8 +35,7 @@
               "src/assets/leaflet/leaflet.js",
               "src/assets/leaflet/leaflet.shpfile.js",
               "src/assets/leaflet/catiline.js",
-              "./node_modules/chart.js/dist/Chart.js",
-              "./node_modules/leaflet-virtual-grid/dist/virtual-grid.js"
+              "./node_modules/chart.js/dist/Chart.js"
             ]
           },
           "configurations": {
